--- a/Sources/HodApplication/CMakeLists.txt
+++ b/Sources/HodApplication/CMakeLists.txt
@@ -2,7 +2,31 @@ cmake_minimum_required(VERSION 3.4...3.27)
 
 include(Global)
 
-project(HodApplication)
+if (APPLE)
+    project(HodApplication LANGUAGES CXX Swift)
+
+    message(STATUS "Swift version : ${CMAKE_Swift_COMPILER_VERSION}")
+    # Verify that we have a new enough compiler
+    if("${CMAKE_Swift_COMPILER_VERSION}" VERSION_LESS 5.9)
+    message(FATAL_ERROR "Bidirectional C++ Interop requires Swift 5.9 or greater. Have ${CMAKE_Swift_COMPILER_VERSION}")
+    endif()
+
+    if(NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND
+    NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
+    message(FATAL_ERROR "Project requires building with Clang.
+    Have ${CMAKE_CXX_COMPILER_ID}")
+    endif()
+
+    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
+
+    # Set up swiftrt.o and runtime library search paths
+    include(InitializeSwift)
+    # cmake/modules/AddSwift.cmake provides the function for creating the Swift to
+    # C++ bridging header
+    include(AddSwift)
+else()
+    project(HodApplication LANGUAGES CXX)
+endif()
 
 file(GLOB_RECURSE Srcs
 	"${PROJECT_SOURCE_DIR}/*.cpp"
@@ -19,8 +43,13 @@ file(GLOB_RECURSE Includes
 
 assign_source_group(${Srcs}) # for VS
 
-add_executable(HodApplication ${Srcs} ${Includes})
-set_property(TARGET HodApplication PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
+if (APPLE)
+	list(APPEND Srcs Main.swift)
+	add_executable(HodApplication ${Srcs} ${Includes})
+	target_include_directories(HodApplication PRIVATE ${PROJECT_SOURCE_DIR})
+else()
+	add_executable(HodApplication ${Srcs} ${Includes})
+	set_property(TARGET HodApplication PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
 #add_dependencies(HodEngine-Application Core DebugLayer ImGui Physics Application Renderer Game)
 #add_dependencies(HodEngine-Editor Core DebugLayer ImGui Physics Application Renderer Game)
@@ -36,9 +65,10 @@ set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT H
 
 include_directories(
 	".."
-	${Glm_INCLUDE_DIRS}
 	${Vulkan_INCLUDE_DIRS}
 )
+
+endif()
 
 add_dependencies(HodApplication HodEngine)
 
@@ -53,3 +83,4 @@ target_compile_definitions(HodApplication PRIVATE "$<$<CONFIG:Editor_Debug>:${CO
 target_compile_definitions(HodApplication PRIVATE "$<$<CONFIG:Editor_Release>:${COMPILE_DEFINITIONS_EDITOR_RELEASE}>")
 target_compile_definitions(HodApplication PRIVATE "$<$<CONFIG:Server_Debug>:${COMPILE_DEFINITIONS_SERVER_DEBUG}>")
 target_compile_definitions(HodApplication PRIVATE "$<$<CONFIG:Server_Release>:${COMPILE_DEFINITIONS_SERVER_RELEASE}>")
+
