--- a/Sources/HodEngine/Renderer/CMakeLists.txt
+++ b/Sources/HodEngine/Renderer/CMakeLists.txt
@@ -44,7 +44,7 @@ assign_source_group(${Srcs}) # for VS
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 "../.."
 ${Stb_INCLUDE_DIRS}
-
+"RHI/Metal/MetalCpp"
 )
 
 if(NOT APPLE)
