Fix Cmake with XCode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,11 @@ set(box2d_INCLUDE_DIRS ${CMAKE_BINARY_DIR}/_deps/box2d-src/include)
 if(WIN32)
   set(box2d_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/box2d-build/bin/Release/box2d.lib)
 elseif(UNIX)
-  set(box2d_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/box2d-build/bin/libbox2d.a)
+  if (XCODE)
+    set(box2d_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/box2d-build/bin/Release/libbox2d.a)
+  else()
+    set(box2d_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/box2d-build/bin/libbox2d.a)
+  endif()
 endif()
 
 include(ExternalProject)
