--- a/Sources/HodEngine/Physics/CMakeLists.txt
+++ b/Sources/HodEngine/Physics/CMakeLists.txt
@@ -13,7 +13,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 	${box2d_INCLUDE_DIRS}
 )
 
-add_library(Physics OBJECT ${Srcs} ${Includes})
+add_library(Physics STATIC ${Srcs} ${Includes})
 set_property(TARGET Physics PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
 add_dependencies(Physics Core Renderer box2d)
