--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ ExternalProject_Add(box2d
   CMAKE_ARGS
     -DBOX2D_BUILD_UNIT_TESTS=OFF
     -DBOX2D_BUILD_TESTBED=OFF
-    -DCMAKE_OSX_DEPLOYMENT_TARGET=14
+    -DCMAKE_OSX_DEPLOYMENT_TARGET=14 #TODO only on MacOs platform
   BUILD_COMMAND 
     ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR}/_deps/box2d-build --config Release
   INSTALL_COMMAND ""
