--- a/Sources/HodEngine/Renderer/CMakeLists.txt
+++ b/Sources/HodEngine/Renderer/CMakeLists.txt
@@ -44,6 +44,7 @@ assign_source_group(${Srcs}) # for VS
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 "../.."
 ${Stb_INCLUDE_DIRS}
+${msdfgen_INCLUDE_DIRS}
 "RHI/Metal/MetalCpp"
 )
 
@@ -55,11 +56,12 @@ endif()
 add_library(Renderer STATIC ${Srcs} ${Includes})
 set_property(TARGET Renderer PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(Renderer Core Window)
+add_dependencies(Renderer Core Window msdfgen)
 
 target_link_libraries(Renderer
   Core
   Window
+  ${msdfgen_LIBRARIES}
 )
 
 if(NOT APPLE)
