--- a/Sources/HodEngine/ImGui/CMakeLists.txt
+++ b/Sources/HodEngine/ImGui/CMakeLists.txt
@@ -69,22 +69,25 @@ assign_source_group(${Srcs}) # for VS
 add_library(ImGui STATIC ${Srcs} ${Includes})
 set_property(TARGET ImGui PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(ImGui Core Window Renderer)
+add_dependencies(ImGui Core Window Renderer freetype)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
 get_target_property(Window_INCLUDES Window INCLUDE_DIRECTORIES)
 get_target_property(Renderer_INCLUDES Renderer INCLUDE_DIRECTORIES)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
   "../.."
+  "DearImGui" # for imguiFreetype include
   ${Core_INCLUDES}
   ${Window_INCLUDES}
   ${Renderer_INCLUDES}
+  ${freetype_INCLUDE_DIRS}
 )
 
 target_link_libraries(ImGui
   Core
   Renderer
   Window
+  ${freetype_LIBRARIES}
 )
 
 if (APPLE)
