First Text renderer

--- a/Sources/HodEngine/Renderer/CMakeLists.txt
+++ b/Sources/HodEngine/Renderer/CMakeLists.txt
@@ -45,6 +45,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 "../.."
 ${Stb_INCLUDE_DIRS}
 ${msdfgen_INCLUDE_DIRS}
+${freetype_INCLUDE_DIRS}
 "RHI/Metal/MetalCpp"
 )
 
@@ -56,12 +57,13 @@ endif()
 add_library(Renderer STATIC ${Srcs} ${Includes})
 set_property(TARGET Renderer PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(Renderer Core Window msdfgen)
+add_dependencies(Renderer Core Window msdfgen freetype)
 
 target_link_libraries(Renderer
   Core
   Window
   ${msdfgen_LIBRARIES}
+  ${freetype_LIBRARIES}
 )
 
 if(NOT APPLE)
