Rework ProjectBrowser (prepare project's source)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -60,9 +60,9 @@
 			"request": "launch",
 			//"program": "${workspaceFolder}/bazel-bin/Sources/EditorApplication/HodEditor.exe",
 			"program": "${command:cmake.launchTargetPath}",
-			"args": [],
+			"args": ["--ProjectPath", "E:/Pong/Pong.hod"],
 			"stopAtEntry": false,
-			//"cwd": "${workspaceFolder}/Data",
+			//"cwd": "E:/Pong/Pong.hod",
 			"environment": [],
 			"console": "integratedTerminal",
 			//"preLaunchTask": "Build HodEditor",
