--- a/Sources/HodEngine/CMakeLists.txt
+++ b/Sources/HodEngine/CMakeLists.txt
@@ -46,6 +46,8 @@ add_library(HodEngine SHARED HodEngine.cpp)
 set_property(TARGET HodEngine PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
 target_link_libraries(HodEngine PRIVATE
+	"-Wl,--whole-archive"
+	"-Wl,--start-group"
 	Core
 	Application
 	Input
@@ -55,6 +57,8 @@ target_link_libraries(HodEngine PRIVATE
 	Renderer
 	Game
 	Editor
+	"-Wl,--end-group"
+	"-Wl,--no-whole-archive"
 )
 
 target_compile_definitions(HodEngine PUBLIC ${PLATFORM_DEFINE})
