--- a/Sources/HodEngine/Renderer/CMakeLists.txt
+++ b/Sources/HodEngine/Renderer/CMakeLists.txt
@@ -8,6 +8,8 @@ find_package(Vulkan REQUIRED)
 find_package(SpirvCross REQUIRED)
 else()
 project(Renderer LANGUAGES CXX OBJCXX)
+find_package(BZip2 REQUIRED)
+find_package(ZLIB REQUIRED)
 endif()
 find_package(Stb REQUIRED)
 
@@ -78,7 +80,7 @@ if(NOT APPLE)
 	set(RENDERER_ENABLE_VALIDATION_LAYER_DEFINE "RENDERER_ENABLE_VALIDATION_LAYER")
   endif ()
 else()
-  target_link_libraries(Renderer "-framework Metal")
+  target_link_libraries(Renderer "-framework Metal" ${BZIP2_LIBRARIES} ${ZLIB_LIBRARIES})
 endif()
 
 target_compile_definitions(Renderer PUBLIC ${PLATFORM_DEFINE} ${RENDERER_DEFINE} ${RENDERER_ENABLE_VALIDATION_LAYER_DEFINE})
