--- a/Sources/HodEngine/Input/CMakeLists.txt
+++ b/Sources/HodEngine/Input/CMakeLists.txt
@@ -10,7 +10,7 @@ else()
 	CollectSourceFiles(${PROJECT_SOURCE_DIR} Srcs Includes EXCLUDES RawInput XInput)
 endif()
 
-add_library(Input OBJECT ${Srcs} ${Includes})
+add_library(Input STATIC ${Srcs} ${Includes})
 set_property(TARGET Input PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
 add_dependencies(Input Core Window Application)
