Fix CMake with XCode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(box2d_INCLUDE_DIRS ${CMAKE_BINARY_DIR}/_deps/box2d-src/include)
 if(WIN32)
   set(box2d_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/box2d-build/bin/Release/box2d.lib)
 elseif(UNIX)
-  if (XCODE)
+  if(${CMAKE_GENERATOR} STREQUAL "Xcode")
     set(box2d_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/box2d-build/bin/Release/libbox2d.a)
   else()
     set(box2d_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/box2d-build/bin/libbox2d.a)
@@ -55,7 +55,7 @@ set(msdfgen_INCLUDE_DIRS ${CMAKE_BINARY_DIR}/_deps/msdfgen-src/include)
 if(WIN32)
   set(msdfgen_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/msdfgen-build/Release/msdfgen-core.lib)
 elseif(UNIX)
-  if (XCODE)
+  if(${CMAKE_GENERATOR} STREQUAL "Xcode")
     set(msdfgen_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/msdfgen-build/Release/libmsdfgen-core.a)
   else()
     set(msdfgen_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/msdfgen-build/libmsdfgen-core.a)
@@ -66,7 +66,7 @@ set(freetype_INCLUDE_DIRS ${CMAKE_BINARY_DIR}/_deps/freetype-src/include)
 if(WIN32)
   set(freetype_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/freetype-build/Release/freetype.lib)
 elseif(UNIX)
-  if (XCODE)
+  if(${CMAKE_GENERATOR} STREQUAL "Xcode")
     set(freetype_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/freetype-build/Release/libfreetype.a)
   else()
     set(freetype_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/freetype-build/libfreetype.a)
