--- a/Sources/HodEngine/Input/CMakeLists.txt
+++ b/Sources/HodEngine/Input/CMakeLists.txt
@@ -10,13 +10,12 @@ else()
 	CollectSourceFiles(${PROJECT_SOURCE_DIR} Srcs Includes EXCLUDES RawInput XInput)
 endif()
 
-add_library(Input STATIC ${Srcs} ${Includes})
+add_library(Input ${LIB_TYPE} ${Srcs} ${Includes})
 set_property(TARGET Input PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(Input Core Window Application)
+add_dependencies(Input Core Window)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
 get_target_property(Window_INCLUDES Window INCLUDE_DIRECTORIES)
-get_target_property(Application_INCLUDES Application INCLUDE_DIRECTORIES)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
   "../.."
@@ -27,7 +26,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 
 target_link_libraries(Input
   Core
-  Application
   Window
 )
 
