--- a/Sources/HodEngine/Editor/CMakeLists.txt
+++ b/Sources/HodEngine/Editor/CMakeLists.txt
@@ -57,10 +57,10 @@ assign_source_group(${Srcs}) # for VS
 find_package(Stb REQUIRED)
 find_package(PortableFileDialog REQUIRED)
 
-add_library(Editor STATIC ${Srcs} ${Includes})
+add_library(Editor ${LIB_TYPE} ${Srcs} ${Includes})
 set_property(TARGET Editor PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(Editor Core ImGui Window Physics Renderer)
+add_dependencies(Editor Core ImGui Window Physics Renderer Game)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
@@ -84,4 +84,5 @@ target_link_libraries(Editor
 	Window
 	Physics
 	Renderer
+  Game
 )
