--- a/Sources/HodEngine/Physics/CMakeLists.txt
+++ b/Sources/HodEngine/Physics/CMakeLists.txt
@@ -13,10 +13,10 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 	${box2d_INCLUDE_DIRS}
 )
 
-add_library(Physics STATIC ${Srcs} ${Includes})
+add_library(Physics ${LIB_TYPE} ${Srcs} ${Includes})
 set_property(TARGET Physics PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(Physics Core Renderer box2d)
+add_dependencies(Physics Core Renderer box2d) #Remove Renderer dep
 
 target_link_libraries(Physics
 	Core
